# rift-engine

./: .env.example  .gitignore  README.md  Rift_Engine_Technical_Design_Document.docx  push_to_github.sh  pyproject.toml  serve.py
api/: __init__.py  main.py
engine/: __init__.py  game_state.py  simulation.py
engine/mcts/: actions.py  explainer.py  lane_state.py  scoring.py  simulator.py  tree.py
features/: __init__.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/coach/: page.tsx
frontend/app/patches/: page.tsx
frontend/app/simulate/: page.tsx
frontend/components/: ChampionInput.tsx  ConfidenceMeter.tsx  ResultCard.tsx  RoleTabs.tsx  Sidebar.tsx
frontend/lib/: api.ts  champions.ts
models/: __init__.py
scrapers/: __init__.py  base_scraper.py  community_dragon.py  oracle_elixir.py  patch_decoder.py
scripts/: decode_patch.py  load_data.py  run_simulation.py  scrape_all.py
ui/: index.html  patches.html
validation/: __init__.py
warehouse/: __init__.py  loader.py  schema.py
